# tokenpulse

./: .gitignore  .venv  AGENTS.md  Cargo.toml  README.md  node_modules
.agents/notes/: README.md  openusage-quota-analysis-2025-03-15.md  reference-codexbar.md  session-usage-field-union-analysis-2026-03-18.md  session-usage-local-scan-analysis-2026-03-18.md  tui-ui-optimization-plan-2026-03-26.md  upstream-session-status-dashboard-research-2026-03-22.md
.agents/notes/archived/: 2026-03-24-reference-openusage-legacy.md  2026-03-24-reference-tokscale-legacy.md
.agents/plans/: PROJECT_STATUS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  model-pricing-mapping.md  session-status-dashboard-plan.md
docs/archive/: session-status-dashboard-plan.md
docs/modules/: pricing.md  quota.md  tui.md  usage.md
docs/specs/: README.md
tokenpulse-cli/: Cargo.toml
tokenpulse-cli/src/: main.rs
tokenpulse-cli/src/commands/: config.rs  init.rs  mod.rs  quota.rs  usage.rs
tokenpulse-cli/src/tui/: mod.rs  theme.rs
tokenpulse-cli/src/tui/views/: mod.rs  quota.rs  usage.rs
tokenpulse-cli/src/tui/widgets/: barchart.rs  gauge.rs  heatmap.rs  mod.rs  table.rs  trend.rs
tokenpulse-core/: Cargo.toml
tokenpulse-core/src/: lib.rs  model_id.rs  provider.rs
tokenpulse-core/src/auth/: antigravity.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
tokenpulse-core/src/config/: mod.rs
tokenpulse-core/src/pricing/: litellm.rs  mod.rs
tokenpulse-core/src/quota/: antigravity.rs  cache.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
tokenpulse-core/src/usage/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  opencode.rs  pi.rs  scanner.rs  store.rs  utils.rs
