[workspace]
members = ["tokenpulse-core", "tokenpulse-cli"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["TokenPulse Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dirs = "6"
walkdir = "2"
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
humantime = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
