[package]
name = "tokenpulse-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tokenpulse"
path = "src/main.rs"

[dependencies]
tokenpulse-core = { path = "../tokenpulse-core" }
tokio.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
humantime.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer = "0.11"
