[package]
name = "tokenpulse-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ureq = { version = "2", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
dirs.workspace = true
walkdir.workspace = true
rayon.workspace = true
rusqlite.workspace = true
tracing.workspace = true
futures.workspace = true
toml = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
